syntax = "proto3";

package transport;

service TodoService {
    rpc Todos(TodoRequest) returns (TodoResponse);
}

message TodoRequest {
}

message TodoResponse {
    repeated Todo todos = 1;
}

message Todo {
    string id = 1;
    string title = 2;
}